# bcss-notifications

./: .env.example  .env.test  Pipfile  README.md  compose.yml  create-artefacts.dockerfile  lint.sh  pylintrc.toml  pyproject.toml  pyright.sh  test-contract.sh  test-unit.sh
.github/workflows/: V2_deploy-lambda-oracleclient-layer.yml  V2_deploy-lambda-package-layer.yml  V2_deploy-lambdas.yml  V2_manual-terraform-action.yml  V2_update-lambda-layer-versions.yml  deploy-lambda-layers.yml  deploy-lambda-oracleclient-layer.yml  deploy-lambda-package-layer.yml  deploy-lambdas.yml  deploy-oracleclient-lambda-layer.yml  detect-dependencies-update.yml  gitleaks.yml  linting-stage.yml  manual-terraform-action.yml  terraform-plan.yml  test-stage.yml  update-lambda-layer-versions.yml
batch_notification_processor/: Dockerfile  access_token.py  batch_processor.py  fake_oracle_database.py  lambda_function.py  notify_api.py  oracle_database.py
callback_simulator/: lambda_function.py
docs/: access-aws-lambdas.md  lambda-alerting-system.md  oracle-thick-client-mode.md
docs/decisions/: 2025-06-10_call_nhs_notify_directly.md
healthcheck/: lambda_function.py
message_status_handler/: Dockerfile  callback_lambda_function.py  message_status_recorder.py  request_verifier.py  scheduled_lambda_function.py
scripts/: package-artefacts.sh
shared/: access_token.py  communication_management.py  database.py  environment.py  exceptions.py  recipient.py
slack_notifier/: Dockerfile  lambda_function.py
terraform/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf
(+60 files in other folders)
