[project]
name = "bcss-notifications"
version = "0.1.0"
description = ""
authors = [
    {name = "Cameron Hargreaves",email = "cameron.hargreaves1@nhs.net"}
]
readme = "README.md"
requires-python = ">=3.13"
packages = [
    {include = "batch_notification_processor"},
    {include = "messsage_status_handler"},
]
dependencies = [
    "astroid (>=3.3.10,<4.0.0)",
    "certifi (>=2025.4.26,<2026.0.0)",
    "cffi (>=1.17.1,<2.0.0)",
    "charset-normalizer (>=3.4.2,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "cryptography (>=45.0.2,<46.0.0)",
    "dill (>=0.4.0,<0.5.0)",
    "distlib (>=0.3.9,<0.4.0)",
    "filelock (>=3.18.0,<4.0.0)",
    "idna (>=3.10,<4.0)",
    "iniconfig (>=2.1.0,<3.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mccabe (>=0.7.0,<0.8.0)",
    "oracledb (>=3.1.1,<4.0.0)",
    "packaging (>=25.0,<26.0)",
    "platformdirs (>=4.3.8,<5.0.0)",
    "pluggy (>=1.6.0,<2.0.0)",
    "pycparser (>=2.22,<3.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tomlkit (>=0.13.2,<0.14.0)",
    "urllib3 (>=2.4.0,<3.0.0)",
    "boto3 (>=1.38.21,<2.0.0)",
    "virtualenv (>=20.31.2,<21.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
requests-mock = "^1.12.1"
pytest-cov = "^6.1.1"
dotenv = "^0.9.9"
pytest-mock = "^3.14.0"
jsonschema = "^4.24.0"
pylint = "^3.3.7"
pact-python = "^2.3.1"

